syntax = "proto3";
option go_package = "pb";

import "google/protobuf/any.proto";

message Message {
    MessageType messageType     = 1;
    google.protobuf.Any payload = 2;

    enum MessageType {
        LimitOrder   = 0;
        OrderClose   = 1;
        MarketOrder  = 2;
        GetOrderBook = 3;
    }
}